[package]
name = "ledger-mob-tests"
description = "Common tests for MobileCoin hardware wallets"
repository = "https://github.com/mobilecoinofficial/ledger-mob.git"
version = "0.16.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[features]
cli = []
default = [ "cli" ]

[dependencies]
base64 = "0.21.0"
hex = "0.4.3"
strum = { version = "0.24.1", features = [ "derive" ] }
anyhow = "1.0.59"
clap = { version = "4.1.4", features = [ "derive", "env" ] }
tokio = { version = "1.20.1", features = [ "full" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ctor = "0.1.23"
lazy_static = "1.4.0"
heapless = "0.8.0"
rand = "0.8.4"
rand_core = "0.6.3"
serde = "1.0.144"
serde_json = "1.0.95"
tiny-bip39 = "1.0"

mc-core = { version = "6", features = [ "bip39" ] }
mc-crypto-keys = { version = "6", default-features = false }
mc-crypto-ring-signature = { version = "6", default-features = false, features = [ "internals" ] }
mc-crypto-memo-mac = { version = "6", default-features = false }
mc-transaction-core = { version = "6" }
mc-transaction-extra = { version = "6" }
mc-transaction-signer = { version = "6" }
mc-transaction-summary = { version = "6" }
mc-util-from-random = { version = "6", default-features = false }

ledger-mob-apdu = { path = "../apdu" }
ledger-mob = { path = "../lib", default_features = false }
ledger-lib = { version = "0.1.0", default_features = false }


curve25519-dalek = { version = "4.1.1", default_features = false }
x25519-dalek = { version = "2.0.0-pre.2", default_features = false }
ed25519-dalek = { version = "2.0.0-pre.0", default_features = false }


[dev-dependencies]
portpicker = "0.1.1"
rand_core = "0.6.4"

rand = "0.8.5"
serde = { version = "1.0.144", features = [ "derive" ] }
toml = "0.5.9"
futures = "0.3.28"

bip32 = { version = "*", features = [ "bip39"] }
tiny-bip39 = "1.0"
slip10_ed25519 = "0.1.3"
simplelog = "0.12.1"

mc-util-test-helper = { version = "6", default_features = false }

[[bin]]
name = "ledger-mob-tests"
path = "src/main.rs"
required-features = [ "cli" ]
